[package]
name = "reaper-save-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
nom = "7.1.3"
nom-supreme = "0.8.0"
ordered-float = "3.7.0"
pretty_assertions = "1.4.0"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-error = "0.2.0"

[dev-dependencies]
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
