[workspace]
resolver = "2"
members = ["reaper-save-rs", "reaper-save-cli", "reaper-track-importer"]

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/reaper-save-rs"
categories = ["wasm"]
edition = "2021"

[workspace.dependencies]
# internal
reaper-save-rs.path = "reaper-save-rs"

# external
derive_more = "0.99.17"
enum-as-inner = "0.6.0"
eyre = "0.6.8"
itertools = "0.11.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
ordered-float = "3.7.0"
pretty_assertions = "1.4.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
clap = { version = "4.3.19", features = ["cargo", "derive", "env"] }

# dev dependencies
test-log = { version = "0.2.12", default-features = false, features = [
  "trace",
] }
