[package]
name = "reaper-save-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre = "0.6.2"
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reaper-save-rs.workspace = true
